--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^15.0.0",
     "express": "^4.17.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
-    "cors": "^2.8.5",
-    "mongoose": "^6.1.9"
+    "mongoose": "^6.1.9",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "concurrently": "^7.0.0",
