--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.9",
+    "morgan": "^1.10.0",
     "validator": "^13.11.0"
   },
   "devDependencies": {
